# qiita_send_bot

./: .env.sample  .gitignore  .pre-commit-config.yaml  Procfile  README.md  main.py  pyproject.toml  rag_bot.py  requirements.txt  schema.sql
.github/workflows/: notify.yml
data/: notified_ids.txt
src/: config.py  notified_ids.py  prompt.py  qiita_client.py  rag_indexer.py  slack_client.py  summarizer.py
